Fix logger